# coinpaprika-cli

./: Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
src/: client.rs  config.rs  main.rs  shell.rs
src/commands/: api_management.rs  attribution.rs  coins.rs  config.rs  contracts.rs  convert.rs  exchanges.rs  global.rs  mod.rs  ohlcv.rs  onboard.rs  people.rs  plans.rs  search.rs  status.rs  tags.rs  tickers.rs
src/output/: api_management.rs  coins.rs  config.rs  contracts.rs  convert.rs  exchanges.rs  global.rs  mod.rs  ohlcv.rs  people.rs  search.rs  status.rs  tags.rs  tickers.rs
